# vult

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INLINE_EDIT_FIXES.md  LESSONS.md  LICENSE  MIGRATION.md  README.md  RELEASE_NOTES.md  RESPONSIVE_TESTING_CHECKLIST.md  SECURITY_TESTING.md  build.rs  clippy.toml  deny.toml  pre-commit  tauri.conf.json
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.well-known/: security.txt
capabilities/: default.json
docs/: ARCHITECTURE.md  CLI_GUIDE.md  FORMAL_VERIFICATION.md  FUZZING.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_crypto.rs  fuzz_pin_validation.rs
icons/: icon.icns
openspec/changes/add-secure-api-key-vault/: design.md  proposal.md  tasks.md
openspec/changes/add-secure-api-key-vault/specs/api-key-management/: spec.md
openspec/changes/add-secure-api-key-vault/specs/device-authentication/: spec.md
openspec/changes/add-secure-api-key-vault/specs/secure-storage/: spec.md
openspec/changes/archive/2026-02-04-sveltekit-typescript-migration/: proposal.md  tasks.md
openspec/changes/archive/2026-02-04-ui-ux-enhancements/: design.md  proposal.md  tasks.md
openspec/changes/backend-lib-cli-separation/: design.md  proposal.md  tasks.md
openspec/changes/backend-lib-cli-separation/specs/api-key-management/: spec.md
openspec/changes/backend-lib-cli-separation/specs/authentication/: spec.md
openspec/changes/backend-lib-cli-separation/specs/cli-interface/: spec.md
openspec/changes/backend-lib-cli-separation/specs/library-api/: spec.md
openspec/changes/backend-lib-cli-separation/specs/secure-storage/: spec.md
openspec/changes/backend-lib-cli-separation/specs/vault-architecture/: spec.md
openspec/changes/sveltekit-typescript-migration/: design.md  tasks.md
openspec/changes/sveltekit-typescript-migration/specs/component-library/: spec.md
openspec/changes/sveltekit-typescript-migration/specs/sveltekit-frontend/: spec.md
openspec/changes/sveltekit-typescript-migration/specs/typescript-types/: spec.md
openspec/specs/api-key-management/: spec.md
openspec/specs/authentication/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/library-api/: spec.md
openspec/specs/secure-storage/: spec.md
openspec/specs/vault-architecture/: spec.md
scripts/: release.sh
src/: auth.rs  clipboard.rs  commands.rs  crypto.rs  crypto_verification.rs  database.rs  error.rs  lib.rs  main.rs
src/core/: mod.rs  types.rs
src/gui/: auth_manager.rs  commands.rs  mod.rs
src/services/: auth_service.rs  crypto_service.rs  key_service.rs  mod.rs  vault_manager.rs
src/src/: auth.rs  clipboard.rs  commands.rs  crypto.rs  database.rs  main.rs
tests/: auto_lock_integration_test.rs  cli_integration_test.rs  inline_editing_test.rs  integration_test.rs
ui/: .gitignore  app.js  app.test.js  index.html  package.json  styles.css  test.html
ui-sveltekit/: README.md  components.json  package-lock.json  package.json  tailwind.config.js  tmpclaude-4eb3-cwd  vitest.config.ts
ui-sveltekit/prerendered/: index.html
ui-sveltekit/prerendered/_app/: version.json
ui-sveltekit/prerendered/_app/immutable/assets/: 0.Bz_w25Db.css  2.B1lsEOeR.css
ui-sveltekit/src/lib/: utils.test.ts  utils.ts
ui-sveltekit/src/lib/css/: app.css
ui-sveltekit/src/lib/services/: activity.test.ts  activity.ts  tauri.test.ts  tauri.ts
ui-sveltekit/src/lib/stores/: clipboard.test.ts  clipboard.ts  theme.ts  ui.test.ts  ui.ts  vault.test.ts  vault.ts
ui-sveltekit/src/lib/types/: api.ts  index.ts
ui-sveltekit/src/routes/: +layout.svelte  +page.svelte
ui-sveltekit/src/tests/: setup.ts
(+41 files in other folders)
