[package]
name = "vult"
version = "0.2.0"
edition = "2021"
description = "Secure API key vault with PIN authentication and AES-256-GCM encryption"
license = "MIT"
repository = "https://github.com/cyberelf/vult"
keywords = ["security", "vault", "api-keys", "encryption"]
categories = ["cryptography", "command-line-utilities"]
default-run = "vult-gui"

[lib]
name = "vult"
path = "src/lib.rs"

[[bin]]
name = "vult"
path = "src/bin/vult.rs"
required-features = ["cli"]

[[bin]]
name = "vult-gui"
path = "src/bin/vult-gui.rs"
required-features = ["gui"]

[build-dependencies]
tauri-build = { version = "2.1", features = [], optional = true }

[dependencies]
# Core dependencies (always included in library)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
argon2 = { version = "0.5", features = ["password-hash"] }
aes-gcm = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.9.2"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
arboard = "3.4"
hex = "0.4"
dirs = "5.0.1"
base64 = "0.22"

# GUI dependencies (optional, for vult-gui binary)
tauri = { version = "2.1", features = ["devtools"], optional = true }
tauri-plugin-shell = { version = "2", optional = true }

# CLI dependencies (optional, for vult binary)
clap = { version = "4.5", features = ["derive", "env", "wrap_help"], optional = true }
clap_complete = { version = "4.5", optional = true }
dialoguer = { version = "0.11", optional = true }
rpassword = { version = "7.3", optional = true }
comfy-table = { version = "7.1", optional = true }
colored = { version = "2.1", optional = true }
ctrlc = { version = "3.4", optional = true }

[features]
default = ["gui", "cli"]
gui = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-build", "custom-protocol"]
cli = ["dep:clap", "dep:clap_complete", "dep:dialoguer", "dep:rpassword", "dep:comfy-table", "dep:colored", "dep:ctrlc"]
custom-protocol = ["tauri/custom-protocol"]

# Development features
dev = ["gui", "cli"]

[dev-dependencies]
proptest = "1.6"
tempfile = "3.10"
test-case = "3.3"
assert_cmd = "2.0"
predicates = "3.1"

