[package]
name = "vult-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.vult]
path = ".."

[[bin]]
name = "fuzz_pin_validation"
path = "fuzz_targets/fuzz_pin_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_crypto"
path = "fuzz_targets/fuzz_crypto.rs"
test = false
doc = false
bench = false
